v.1.0.3
* tweaked gear drop types, jewelry rarer, staffs more common
* made elemental mobs a bit weaker.
* buffed elemental resist affixes a bit
* fix loot not being dropped if player doesnt do the finishing hit

v.1.0.2
* fix horse gui crash
* added chinese translation

v.1.0.1

Added required dependences, sorry about that!

* buffed gear drops
* buffed repair station
* nerf socket chance
* made mob lvls go faster per distance
* gear durability shouldnt go down this fast anymore

1.0

Big compatibility changes:

* Damage is no longer overrided except for item's with stats and my spells. This means other mod's gear and spells should ALL be compatible now!
* There's no magical mine and slash hp anymore, instead your normal hearts are increased.
* Stats scale much slower with levels, and if you want to nerf or buff how strong my mod is, just increase or decrease stat scaling or maximum level. Both work.
* Vanilla armor is overrided for entity damage, but there's a config for effectiveness now.

As a result, the mod should be a lot more modpack friendly while still easily allowing itself to be the main point of a modpack by just tweaking one or two config options.


Big changes that required the rework:

* Spells are now Skill Gems.
* Talent tree is gone. 
* Gear now has local and global stats, local stats are weapon damage, armor etc. 
Think Path of exile 50 base armor + adds 20 to armor + 80% increased armor and the item totals it up.
* Gear rarities trimmed, now Common, Magical, Rare and Unique. Common complaint was that "Legendary" gear was sometimes too weak for the name.
New system doesn't have that issue, the rarity describes how rare it is now, not power level.
* spells are now only casted by staffs (compatible item's don't work for now)
* spell hotbar is gone, choose spell by pressing R and 1-9 and then right click to use it.

Added features:
* generated chests everywhere now have random loot in them