@@ -1,6 +1,6 @@
 package com.robertx22.mine_and_slash.mixin_ducks;
 
 public interface ProjectileEntityDuck {
-    float my$getDmgMulti();
 
+    float my$getDmgMulti();
 }
