@@ -1,8 +1,15 @@
 v.1.0.3
+
+Trying out a different damage system. Basically:
+- I don't change vanilla damage at all, I just add my damage too.
+- This leads to all armor and weapons being compatible, just less and less useful as Age of Exile stats grow over levels.
+- I'm still unsure if players who attack with Age of Exile weapons should do both vanilla and exile damage.
+
 * tweaked gear drop types, jewelry rarer, staffs more common
 * made elemental mobs a bit weaker.
 * buffed elemental resist affixes a bit
 * fix loot not being dropped if player doesnt do the finishing hit
+* fix affixes all being same weight (chance to spawn)
 
 v.1.0.2
 * fix horse gui crash
